feat: add authorized for api and write api get myinfouser
