# routes/router.go
@@ -2,24 +2,38 @@ package routes
 
 import (
 	"daoduy.com/hoc-golang/controllers"
+	"daoduy.com/hoc-golang/middleware"
 	"github.com/gin-gonic/gin"
 )
 
 func SetupRouter(r *gin.Engine) *gin.Engine {
-	userRoutes := r.Group("/users")
-	{
-		userRoutes.GET("/", controllers.GetAllUsers)
-		userRoutes.GET("/:id", controllers.GetUserById)
-		userRoutes.POST("/", controllers.CreateUser)
-		// userRoutes.DELETE("/:id", controllers.DeleteUser)
-	}
-
 	authRouters := r.Group("/auth")
 	{
 		authRouters.POST("/login", controllers.Login)
-		authRouters.POST("/logout", controllers.Logout)
-
+		authRouters.Use(middleware.AuthMiddleware())
+		{
+			authRouters.POST("/logout", controllers.Logout)
+		}
 	}
+
+	userRoutes := r.Group("/users")
+	{
+		userRoutes.POST("/", controllers.CreateUser)
+
+		userRoutes.Use(middleware.AuthMiddleware())
+		{
+			adminRoutes := userRoutes.Group("/")
+			adminRoutes.Use(middleware.AuthMiddleware("ADMIN"))
+			{
+				adminRoutes.GET("/", controllers.GetAllUsers) 
+				adminRoutes.GET("/:id", controllers.GetUserById)
+				// adminRoutes.DELETE("/:id", controllers.DeleteUser)
+			}
+
+			userRoutes.GET("/myinfo", controllers.MyInfoUser)
+		}
+	}
+
 
 	return r
 }
